--- a/backend/.env
+++ b/backend/.env
@@ -10,3 +10,6 @@ SERVER_PORT=5000
 # JWT Configuration
 JWT_SECRET=apieceofjob_secret_key_2024
 JWT_EXPIRES_IN=24h
+
+#OPEN AI API KEY
+OPENAI_API_KEY=sk-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
